--- a/docker-ci-cd.yml
+++ b/docker-ci-cd.yml
@@ -33,10 +33,10 @@ jobs:
         run: npm run test:coverage || echo "No coverage available"
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "meadowbees" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest .
+        run: docker build -t meadowbees/bulletin-board-app:latest .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest
+        run: docker push meadowbees/bulletin-board-app:latest
