--- a/docker-ci-cd.yml
+++ b/docker-ci-cd.yml
@@ -33,10 +33,13 @@ jobs:
         run: npm run test:coverage || echo "No coverage available"
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "meadowbees" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t meadowbees/bulletin-board-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest .
 
       - name: Push Docker image
-        run: docker push meadowbees/bulletin-board-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest
