--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
-"scripts": {
-  "start": "node index.js",
-  "test": "echo \"No tests defined\" && exit 0",
-  "test:coverage": "echo \"No coverage available\" && exit 0"
+{
+  "name": "bulletin-board-app",
+  "version": "1.0.0",
+  "description": "A simple Node.js",
+  "main": "server.js",
+  "author": "meadowbees",
+  "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "body-parser": "^1.20.3",
+    "ejs": "^2.7.4",
+    "vue": "^1.0.28",
+    "vue-resource": "^0.1.17",
+    "errorhandler": "^1.5.1",
+    "method-override": "^2.3.10",
+    "morgan": "^1.10.0",
+    "bootstrap": "^3.4.1"
+  }
 }
