--- a/.github/workflows/node-docker-ci.yml
+++ b/.github/workflows/node-docker-ci.yml
@@ -2,39 +2,52 @@ name: Node.js CI and Docker Build
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
     types: [closed]
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build-test-deploy:
+  build-test-docker:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Setup Node.js and NPM
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies
+      # Step 3: Install dependencies
+      - name: Install npm packages
         run: npm install
 
+      # Step 4: Run tests
       - name: Run tests
         run: npm run test
 
-      - name: Run coverage tests
+      # Step 5: Run test coverage
+      - name: Test coverage
         run: npm run test:coverage
 
-      - name: Build Docker image
-        run: docker build -t shawnjensen/bulletin-board-app:latest .
-
+      # Step 6: Log in to Docker Hub securely
       - name: Log in to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image to Docker Hub
-        run: docker push shawnjensen/bulletin-board-app:latest
+      # Step 7: Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest .
+
+      # Step 8: Push Docker image
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/bulletin-board-app:latest
