--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,42 +1,64 @@
-name: CI/CD Pipeline
+name: ci-cd
 
 on:
+  workflow_dispatch: {}
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    types:
-      - closed
-    branches:
-      - main
+    branches: [ "main" ]
+    types: [ closed ]
 
 jobs:
-  build-and-deploy:
+  build-test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js (v20)
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
+          cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
+      - name: npm run install
+        run: npm run install
 
-      - name: Run tests
-        run: npm run test || echo "Skipping tests for now"
+      - name: Run unit tests
+        run: npm run test
 
-      - name: Run test coverage
-        run: npm run test:coverage || echo "Skipping coverage for now"
+      - name: Run coverage
+        run: npm run test:coverage
+
+  docker-build-and-push:
+    needs: build-test
+    runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && github.event.pull_request.merged == true) ||
+      github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t meadowbees/bulletin-board-app:latest .
-
-      - name: Push Docker image
-        run: docker push meadowbees/bulletin-board-app:latest
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/bulletin-board-app:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/bulletin-board-app:${{ github.sha }}
