--- a/.github/workflows/docker-ci-cd.yml
+++ b/.github/workflows/docker-ci-cd.yml
@@ -1,7 +1,6 @@
-name: ci-cd
+name: CI/CD Pipeline
 
 on:
-  workflow_dispatch: {}
   push:
     branches: [ "main" ]
   pull_request:
@@ -9,43 +8,26 @@ on:
     types: [ closed ]
 
 jobs:
-  build-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (v20)
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: 20
 
-      - name: npm run install
-        run: npm run install
+      - name: Install dependencies
+        run: npm install
 
-      - name: Run unit tests
+      - name: Run tests
         run: npm run test
 
       - name: Run coverage
         run: npm run test:coverage
-
-  docker-build-and-push:
-    needs: build-test
-    runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'push' ||
-      (github.event_name == 'pull_request' && github.event.pull_request.merged == true) ||
-      github.event_name == 'workflow_dispatch'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -53,12 +35,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          platforms: linux/amd64
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/bulletin-board-app:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/bulletin-board-app:${{ github.sha }}
+          tags: kamara1994/bulletin-board-app:latest
